@@ -85,12 +85,14 @@
     <Compile Include="CombinableUse.cs" />
     <Compile Include="CompareKind.cs" />
     <Compile Include="Do.cs" />
+    <Compile Include="ElementsContainer.cs" />
     <Compile Include="ExecutableNotAvailableException.cs" />
     <Compile Include="Internal\License.xaml.cs">
       <DependentUpon>License.xaml</DependentUpon>
     </Compile>
     <Compile Include="Internal\StringExtensions.cs" />
     <Compile Include="Internal\SystemStrings.cs" />
+    <Compile Include="MissingWindowException.cs" />
     <Compile Include="Properties\CommonMeta.cs" />
     <Compile Include="BasicElements\BasicButton.cs" />
     <Compile Include="BasicElements\BasicCheckBox.cs" />
